@@ -1,7 +1,6 @@
 package roguelike;
 
 import java.io.IOException;
-import java.util.Objects;
 import java.util.Scanner;
 
 public class UserInterface {
@@ -10,37 +9,37 @@ public class UserInterface {
     private final Player player;
     private final Monster monster;
 
-    public UserInterface(int length, int height) {
+    public UserInterface(int length, int height, String name) {
         this.scanner = new Scanner(System.in);
-        this.dungeonMap = new DungeonMap(length,height);
+        this.dungeonMap = new DungeonMap(length, height, name);
         player = dungeonMap.getPlayer();
         monster = dungeonMap.getMonster();
     }
 
-    public void run(){
-        String command = null;
-        while  (!Objects.equals(command, "q")){
+    public void run() {
+        String command;
+        do {
             clearScreen();
             dungeonMap.createGrid();
             dungeonMap.printGrid();
             command = scanner.next();
             player.move(command);
             dungeonMap.simplePathfinding(monster);
-        }
+        } while (!command.equals("q"));
     }
 
-    public void clearScreen(){
-       try{
-           final String os = System.getProperty("os.name");
+    public void clearScreen() {
+        try {
+            final String os = System.getProperty("os.name");
 
-           if(os.contains("Windows")){
-               new ProcessBuilder("cmd", "/c", "cls").inheritIO().start().waitFor();
-           }
-           else{
-               Runtime.getRuntime().exec("clear");
-           }
-       } catch (IOException | InterruptedException e) {
-           throw new RuntimeException(e);
-       }
+            if (os.contains("Windows")) {
+                new ProcessBuilder("cmd", "/c", "cls").inheritIO().start().waitFor();
+            } else {
+                System.out.print("\033[H\033[2J");
+                System.out.flush();
+            }
+        } catch (IOException | InterruptedException e) {
+            throw new RuntimeException(e);
+        }
     }
 }
